[package]
name = "nex-protocols-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
nex-rs = { git = "https://github.com/zaksabeast/nex-rs.git", rev = "29f9365" }
no_std_io = { git = "https://github.com/zaksabeast/no_std_io.git", rev = "fb1d06e" }
num_enum = { version = "0.5", default-features = false }
