[package]
name = "nex-protocols-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.52"
nex-rs = { git = "https://github.com/zaksabeast/nex-rs.git", rev = "0ddc579" }
no_std_io = { git = "https://github.com/zaksabeast/no_std_io.git", rev = "4a9ca86" }
num_enum = { version = "0.5", default-features = false }
